Fixed Item title wrapping.

--- a/modules/gui/frontend/src/widget/item.module.css
+++ b/modules/gui/frontend/src/widget/item.module.css
@@ -35,6 +35,7 @@
     font-weight: 800;
     text-transform: uppercase;
     color: #808080;
+    white-space: nowrap;
 }
 
 .description {
